# asf

./: .gitignore  README.md
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/cmdhost/arm64-v8a/: cmdhost
app/src/main/assets/cmdhost/armeabi-v7a/: cmdhost
app/src/main/assets/cmdhost/x86/: cmdhost
app/src/main/assets/cmdhost/x86_64/: cmdhost
app/src/main/cpp/: CMakeLists.txt  androidcallservice.cpp  androidcallservice.h  enginebinder.cpp  enginebinder.h  native-lib.cpp
app/src/main/cpp/3rd/libevdev/: CMakeLists.txt
app/src/main/cpp/3rd/libevent/: CMakeLists.txt  epoll_sub.c  evutil_rand.c
app/src/main/cpp/3rd/libpng/: CMakeLists.txt
app/src/main/cpp/3rd/lua/: CMakeLists.txt  ldebug.c  ldo.c  ldump.c  llex.c  lopcodes.c  lopcodes.h  lstate.c  lstate.h  luaconf.h  lundump.c  lvm.c
app/src/main/cpp/3rd/lua-cjson/: CMakeLists.txt
app/src/main/cpp/3rd/minicap-shared/aosp/include/: Minicap.hpp
app/src/main/cpp/base/: CMakeLists.txt  autolock.h  base64.c  base64.h  buffer.h  common.cpp  common.h  configutil.cpp  configutil.h  crc32.c  crc32.h  crypt.c  crypt.h  errcode.h  fileutil.cpp  fileutil.h  handle.h  ipcclient.cpp  ipcclient.h  ipcconnection.cpp  ipcconnection.h  ipcserver.cpp  ipcserver.h  lz77.c  lz77.h  msgchannel.cpp  msgchannel.h  object.h  spinmutex.h  strutil.cpp  strutil.h  threadevent.h
app/src/main/cpp/cmdhost/: CMakeLists.txt  main.cpp
app/src/main/cpp/cmdsrv/: CMakeLists.txt  cmdcode.h  cmdcontext.cpp  cmdcontext.h  cmddispatcher.cpp  cmddispatcher.h  cmdserver.cpp  cmdserver.h
app/src/main/cpp/control/: CMakeLists.txt  androidcaller.cpp  androidcaller.h  androidcallercmd.h  colorassist.cpp  colorassist.h  colorutils.h  controller.cpp  controller.h  deviceinfo.cpp  deviceinfo.h  inject.cpp  inject.h  inputassist.cpp  inputassist.h  minitouch.cpp  minitouch.h  pluginmgr.cpp  pluginmgr.h  processbinder.cpp  processbinder.h  processbindercmd.h  screenreader.cpp  screenreader.h  screenreaderbyfb.cpp  screenreaderbyfb.h  simpleocr.cpp  simpleocr.h  virtdisplayreader.cpp  virtdisplayreader.h
app/src/main/cpp/engine/: CMakeLists.txt  cmdbridge.cpp  cmdbridge.h  enginecmd.h  engineservice.cpp  engineservice.h  logfile.cpp  logfile.h  lualib_bit.cpp  lualib_color.cpp  lualib_event.cpp  lualib_file.cpp  lualib_input.cpp  lualib_int64.cpp  lualib_memory.cpp  lualib_misc.cpp  lualib_plugin.cpp  lualib_script.cpp  lualib_struct.cpp  luamain.cpp  luamain.h  luastub.cpp  luastub.h  main.cpp  msgqueue.h  pluginproxy.cpp  pluginproxy.h
app/src/main/cpp/procspy/: CMakeLists.txt  main.cpp  memassist.cpp  memassist.h
app/src/main/java/com/rainman/asf/: App.java  (+5 more)
app/src/main/res/drawable/: background_script.xml  bg_floating_menu_left.xml  bg_floating_menu_right.xml  bg_option_view_dialog.xml  btn_control_selector.xml  ic_about.xml  ic_accessibility.xml  ic_close.xml  ic_draw_overlay.xml  ic_exit_to_app_black_24dp.xml  ic_floating_ball.xml  ic_floating_window.xml  ic_log.xml  ic_remote_control.xml  ic_root.xml  ic_scheduler.xml  ic_screen_capture.xml  ic_script.xml  ic_script_scheduler.xml  ic_script_setting.xml  ic_script_setting_ex.xml  ic_settings_black_24dp.xml  ic_shake.xml  ic_start.xml  ic_stop.xml  ic_vibration.xml
app/src/main/res/drawable-v19/: background_script.xml
app/src/main/res/layout/: activity_about.xml  activity_download.xml  activity_main.xml  activity_option.xml  activity_scheduler.xml  activity_setting.xml  activity_splash.xml  activity_visitor.xml  dialog_input.xml  dialog_option_view.xml  drawer_menu_group.xml  drawer_menu_item.xml  fragment_drawer.xml  fragment_html_option.xml  fragment_list_option.xml  fragment_log.xml  fragment_scheduler.xml  fragment_script.xml  item_edit.xml  item_group.xml  item_switch.xml  toolbar_main.xml  view_about_item.xml  view_download_item.xml  view_floating_menu.xml  view_floating_window.xml  view_icon_button.xml  view_log_item.xml  view_scheduler_item.xml  view_script_item.xml  view_visitor_item.xml
app/src/main/res/menu/: log_list.xml  option_detail.xml  scheduler.xml  scheduler_item.xml  scheduler_list.xml  script_item.xml  script_list.xml
app/src/main/res/values/: attrs.xml  colors.xml  ic_launcher_background.xml  strings.xml  styles.xml
app/src/main/res/xml/: accessibility.xml  pref_settings.xml
gradle/wrapper/: gradle-wrapper.properties
(+84 files in other folders)
